fix dialog wrap

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ button {
     height: 100%;
     top: 0px;
     left: 0px;
-    z-index: 1000;
+    z-index: 5;
     display: none;
 }
 
